# onlineVideo

./: .gitignore  LICENSE
backend/: readme.md  requirements.txt
backend/onlineBackend/: manage.py
backend/onlineBackend/flaskr/: auth.py  backend.py  db.py
backend/onlineBackend/onlineBackend/: settings.py  urls.py  wsgi.py
mobile/: readme.md
mobile/onlinevideo/: README.md  pubspec.yaml
mobile/onlinevideo/android/app/: build.gradle
mobile/onlinevideo/android/app/src/debug/: AndroidManifest.xml
mobile/onlinevideo/android/app/src/main/: AndroidManifest.xml
mobile/onlinevideo/android/app/src/main/java/com/example/onlinevideo/: MainActivity.java
mobile/onlinevideo/ios/Runner/: Info.plist
mobile/onlinevideo/ios/Runner.xcodeproj/: project.pbxproj
mobile/onlinevideo/test/: widget_test.dart
rust_server/: Cargo.toml
rust_server/backend/: Cargo.toml  request.http
rust_server/backend/src/: lib.rs  main.rs
rust_server/backend/src/channel/: channels.rs
rust_server/backend/src/user/: google_user.rs
rust_server/media_server/: Cargo.toml
rust_server/media_server/src/: main.rs
server/: .gitignore  CMakeLists.txt  readme.md
server/src/common/: ms_common.hpp
server/src/main/: media_server.cpp
server/src/module/: ms_io.cpp  ms_io.hpp  ms_log.cpp  ms_log.hpp
server/src/utest/: ms_utest.cpp
web/: readme.md
web/onlineVideo/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
web/onlineVideo/e2e/src/: app.e2e-spec.ts
web/onlineVideo/src/: index.html
web/onlineVideo/src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
web/onlineVideo/src/app/channel/: channel.component.css  channel.component.html  channel.component.ts
web/onlineVideo/src/app/index/: index.component.css  index.component.html  index.component.ts
web/onlineVideo/src/app/navigate/: navigate.component.css  navigate.component.html  navigate.component.ts  user.dialog.html
web/onlineVideo/src/config/: config.service.ts
web/onlineVideo/src/interface/: user.service.ts
web/station/: package.json
